--- a/pom.xml
+++ b/pom.xml
@@ -119,4 +119,8 @@
             <version>52.1</version>
         </dependency>
     </dependencies>
+    <properties>
+        <maven.compiler.source>17</maven.compiler.source>
+        <maven.compiler.target>17</maven.compiler.target>
+    </properties>
 </project>
